--- a/substreams.yaml
+++ b/substreams.yaml
@@ -1,14 +1,11 @@
 specVersion: v0.1.0
 package:
-  name: "substreams_template"
-  version: v0.1.0
-
-imports:
-  database_change: https://github.com/streamingfast/substreams-sink-database-changes/releases/download/v1.2.0/substreams-database-change-v1.2.0.spkg
+  name: 'substreams_ethereum_quickstart'
+  version: v1.0.0
 
 protobuf:
   files:
-    - erc721.proto
+    - block_meta.proto
   importPaths:
     - ./proto
 
@@ -18,29 +15,9 @@ binaries:
     file: ./target/wasm32-unknown-unknown/release/substreams.wasm
 
 modules:
-  - name: map_transfers
+  - name: map_block
     kind: map
-    initialBlock: 12287507
     inputs:
       - source: sf.ethereum.type.v2.Block
     output:
-      type: proto:eth.erc721.v1.Transfers
-
-  - name: store_transfers
-    kind: store
-    initialBlock: 12287507
-    updatePolicy: add
-    valueType: int64
-    inputs:
-      - map: map_transfers
-
-  - name: db_out
-    kind: map
-    initialBlock: 12287507
-    inputs:
-      - source: sf.substreams.v1.Clock
-      - map: map_transfers
-      - store: store_transfers
-        mode: deltas
-    output:
-      type: proto:sf.substreams.sink.database.v1.DatabaseChanges
+      type: proto:acme.block_meta.v1.BlockMeta
