Fix Timestamp to Date String functionality

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ prost = "0.11"
 num-bigint = "0.4"
 bs58 = "0.5.0"
 borsh = { version = "0.10.3"}
+chrono = { version = "0.4", features = [ "std" ], default-features = false }
 
 [profile.release]
 lto = true
