--- a/pyth/substreams.yaml
+++ b/pyth/substreams.yaml
@@ -1,6 +1,6 @@
 specVersion: v0.1.0
 package:
-  name: 'tl_solana_pyth_1_0_0'
+  name: 'tl_solana_pyth_oracle_1_0_0'
   version: v1.0.0
 
 protobuf:
