fixes invalid length of input error

--- a/solana-program-library/solana-compute-budget/Makefile
+++ b/solana-program-library/solana-compute-budget/Makefile
@@ -6,7 +6,7 @@ build:
 
 .PHONY: stream
 stream: build
-	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 251293572 -t +1
+	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 252842623 -t +1
 
 .PHONY: protogen
 protogen:
@@ -15,3 +15,6 @@ protogen:
 .PHONY: package
 package:
 	substreams pack ./substreams.yaml
+
+
+# 2024-04-10T20:36:00.696Z ERRO (cli) application shutdown unexpectedly, quitting: stream invalid: rpc error: code = InvalidArgument desc = rpc error: code = InvalidArgument desc = step new irr: handler step new: execute modules: applying executor results "map_block": execute: maps wasm call: block 252842623: module "map_block": general wasm execution panicked: wasm execution failed deterministically: panic in the wasm: "called `Result::unwrap()` on an `Err` value: Custom { kind: InvalidInput, error: \"Unexpected length of input\" }" at src/instruction.rs:61:89
