--- a/filter-program-transactions/substreams.yaml
+++ b/filter-program-transactions/substreams.yaml
@@ -1,7 +1,7 @@
 specVersion: v0.1.0
 package:
-  name: 'missing_programs_v1_0_0'
-  version: v1.0.0
+  name: 'new_programs_v1_0_4'
+  version: v1.0.4
 
 protobuf:
   files:
@@ -13,6 +13,7 @@ protobuf:
 
 imports:
   sink_files: https://github.com/streamingfast/substreams-sink-files/releases/download/v0.2.0/substreams-sink-files-v0.2.0.spkg
+  solana_explorers: https://github.com/streamingfast/substreams-explorers/releases/download/v1.0.1/solana-explorer-v0.2.0.spkg
 
 binaries:
   default:
@@ -30,6 +31,6 @@ modules:
   - name: jsonl_out
     kind: map
     inputs:
-      - source: sf.solana.type.v1.Block
+      - map: solana_explorers:map_block_without_votes
     output:
       type: proto:sf.substreams.sink.files.v1.Lines
