--- a/filter-program-transactions/substreams.yaml
+++ b/filter-program-transactions/substreams.yaml
@@ -1,7 +1,7 @@
 specVersion: v0.1.0
 package:
-  name: 'programs_long_running_v_0_7'
-  version: v1.0.7
+  name: 'new_programs_v1_0_16'
+  version: v1.0.16
 
 protobuf:
   files:
