update tx stats substream to use blocks without votes as input

--- a/transactions-stats-analysis/substreams.yaml
+++ b/transactions-stats-analysis/substreams.yaml
@@ -1,13 +1,17 @@
 specVersion: v0.1.0
 package:
-  name: 'tl_solana_transactions_stats_1_0_5'
-  version: v1.0.5
+  name: 'tl_solana_transactions_stats_1_0_6'
+  version: v1.0.6
 
 protobuf:
   files:
     - output.proto
   importPaths:
     - ./proto
+
+imports:
+  sink_files: https://github.com/streamingfast/substreams-sink-files/releases/download/v0.2.0/substreams-sink-files-v0.2.0.spkg
+  solana_explorers: https://github.com/streamingfast/substreams-explorers/releases/download/v1.0.1/solana-explorer-v0.2.0.spkg
 
 binaries:
   default:
@@ -18,6 +22,6 @@ modules:
   - name: map_block
     kind: map
     inputs:
-      - source: sf.solana.type.v1.Block
+      - map: solana_explorers:map_block_without_votes
     output:
       type: proto:sf.solana.transaction_stats.v1.Output
