updates dex trades with sol:blocks_without_votes module

--- a/dex-trades/substreams.yaml
+++ b/dex-trades/substreams.yaml
@@ -14,10 +14,15 @@ binaries:
     type: wasm/rust-v1
     file: target/wasm32-unknown-unknown/release/substreams.wasm
 
+imports:
+  sol: https://spkg.io/streamingfast/solana-common-v0.3.0.spkg
+
 modules:
   - name: map_block
     kind: map
     inputs:
-      - source: sf.solana.type.v1.Block
+      - map: sol:blocks_without_votes
     output:
       type: proto:sf.solana.dex.trades.v1.Output
+
+network: solana
