--- a/solana-program-library/spl-system-program/Cargo.toml
+++ b/solana-program-library/spl-system-program/Cargo.toml
@@ -8,8 +8,9 @@ name = "substreams"
 crate-type = ["cdylib"]
 
 [dependencies]
-substreams = "0.5"
+substreams = "^0.5.0"
 substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
+substreams-solana-core = "0.13.0"
 prost = "0.11"
 num-bigint = "0.4"
 bs58 = "0.5.0"
