--- a/solana-program-library/spl-system-program/substreams.yaml
+++ b/solana-program-library/spl-system-program/substreams.yaml
@@ -1,7 +1,7 @@
 specVersion: v0.1.0
 package:
-  name: 'tl_solana_programs_spl_system_program'
-  version: v1.0.0
+  name: 'tl_solana_programs_spl_system_program_1_0_1'
+  version: v1.0.1
 
 protobuf:
   files:
@@ -9,20 +9,20 @@ protobuf:
   importPaths:
     - ./proto
 
-imports:
-  address_lookup_tables: https://github.com/streamingfast/substreams-solana-address-lookup-table/releases/download/v0.1.1/address-lookup-table-v0.1.1.spkg
-
-
 binaries:
   default:
     type: wasm/rust-v1
     file: target/wasm32-unknown-unknown/release/substreams.wasm
 
+imports:
+  sol: https://spkg.io/streamingfast/solana-common-v0.3.0.spkg
+
 modules:
   - name: map_block
     kind: map
     inputs:
-      - source: sf.solana.type.v1.Block
-      - store: address_lookup_tables:store_address_lookup_tables
+      - map: sol:blocks_without_votes
     output:
       type: proto:sf.solana.spl.system.program.v1.Output
+
+network: solana
