--- a/account-token-balances/substreams.yaml
+++ b/account-token-balances/substreams.yaml
@@ -1,13 +1,17 @@
 specVersion: v0.1.0
 package:
-  name: 'tl_account_balances_1_0_2'
-  version: v1.0.2
+  name: 'tl_account_balances_1_0_3'
+  version: v1.0.3
 
 protobuf:
   files:
     - output.proto
   importPaths:
     - ./proto
+
+imports:
+  sol: https://spkg.io/streamingfast/solana-common-v0.3.0.spkg
+
 
 binaries:
   default:
@@ -18,6 +22,6 @@ modules:
   - name: map_block
     kind: map
     inputs:
-      - source: sf.solana.type.v1.Block
+      - map: sol:blocks_without_votes
     output:
       type: proto:sf.solana.account_balance.v1.Output
