--- a/filter-program-transactions/substreams.yaml
+++ b/filter-program-transactions/substreams.yaml
@@ -1,7 +1,7 @@
 specVersion: v0.1.0
 package:
-  name: 'jupiter_perp_txns_v1_0_0'
-  version: v1.0.0
+  name: 'master_programs_v1_0_6'
+  version: v1.0.6
 
 protobuf:
   files:
