--- a/filter-program-transactions/substreams.yaml
+++ b/filter-program-transactions/substreams.yaml
@@ -1,7 +1,7 @@
 specVersion: v0.1.0
 package:
-  name: 'master_programs_v1_0_7'
-  version: v1.0.7
+  name: 'new_programs_v1_0_27'
+  version: v1.0.27
 
 protobuf:
   files:
