--- a/solana-raw-blocks/Makefile
+++ b/solana-raw-blocks/Makefile
@@ -6,7 +6,7 @@ build:
 
 .PHONY: stream
 stream: build
-	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 0 -t +100
+	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 0
 
 .PHONY: protogen
 protogen:
