update solana raw blocks substream

--- a/solana-raw-blocks/Makefile
+++ b/solana-raw-blocks/Makefile
@@ -6,7 +6,7 @@ build:
 
 .PHONY: stream
 stream: build
-	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 0
+	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 56700000 -t +1
 
 .PHONY: protogen
 protogen:
