--- a/solana-raw-transactions/Makefile
+++ b/solana-raw-transactions/Makefile
@@ -6,7 +6,7 @@ build:
 
 .PHONY: stream
 stream: build
-	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 105368
+	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 316612822
 
 .PHONY: protogen
 protogen:
