--- a/solana-program-library/spl-token/Cargo.toml
+++ b/solana-program-library/spl-token/Cargo.toml
@@ -21,6 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 serde-wasm-bindgen = "0.5"
+console_error_panic_hook = "0.1"
 
 [profile.release]
 lto = true
