--- a/metaplex/token-metadata/Cargo.toml
+++ b/metaplex/token-metadata/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 edition = "2021"
 
 [lib]
-name = "substreams"
+name = "metaplex_token_metadata"
 crate-type = ["cdylib"]
 
 [dependencies]
@@ -18,6 +18,11 @@ bs58 = "0.5.0"
 base64 = "0.21.5"
 borsh = { version = "0.10.3"}
 chrono = { version = "0.4", features = [ "std" ], default-features = false }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+serde-wasm-bindgen = "0.5"
+console_error_panic_hook = "0.1"
 
 [profile.release]
 lto = true
