adds wallet positions and spl trump transfers code

--- a/solana-program-library/spl-token-trump-transfers/substreams.yaml
+++ b/solana-program-library/spl-token-trump-transfers/substreams.yaml
@@ -1,7 +1,7 @@
 specVersion: v0.1.0
 package:
-  name: 'tl_solana_wallet_positions_dex_trades_1_0_5'
-  version: v1.0.5
+  name: 'tl_solana_programs_spl_token_trump_transfers_1_0_1'
+  version: v1.0.1
 
 protobuf:
   files:
@@ -14,15 +14,10 @@ binaries:
     type: wasm/rust-v1
     file: target/wasm32-unknown-unknown/release/substreams.wasm
 
-imports:
-  sol: https://spkg.io/streamingfast/solana-common-v0.3.0.spkg
-
 modules:
   - name: map_block
     kind: map
     inputs:
-      - map: sol:blocks_without_votes
+      - source: sf.solana.type.v1.Block
     output:
-      type: proto:sf.solana.wallet.positions.dex.trades.v1.Output
-
-network: solana
+      type: proto:sf.solana.spl.v1.Output
