--- a/meteora/dlmm/Makefile
+++ b/meteora/dlmm/Makefile
@@ -2,7 +2,7 @@
 all: build
 
 .PHONY: build
-build: protogen
+build: clean protogen
 	cargo build --target wasm32-unknown-unknown --release
 
 .PHONY: protogen
@@ -15,15 +15,15 @@ package: build
 
 .PHONY: stream
 stream: build
-	substreams run -e mainnet.sol.streamingfast.io:443 substreams.yaml map_block -s 335838627 -t +1 > meteora_dlmm_instructions.jsonl
+	substreams run -e mainnet.sol.streamingfast.io:443 substreams.yaml map_block -s 323803860 -t +1 > meteora_dlmm.jsonl
 
 .PHONY: stream_output_to_stdout
 stream_output_to_stdout: build
 	substreams run -e mainnet.sol.streamingfast.io:443 substreams.yaml map_block -s 240000000 -t +10 --output-mode=jsonl
 
-.PHONY: test_stream
-test_stream: build
-	substreams run -e mainnet.sol.streamingfast.io:443 substreams.yaml map_block -s 338000000 -t +100 --output-mode=json
+.PHONY: debug_build
+debug_build: clean protogen
+	RUSTFLAGS="--cfg debug_assertions" cargo build --target wasm32-unknown-unknown --release -v
 
 .PHONY: clean
 clean:
