updates liquidity prodivers stream

--- a/liquidity-providers-extended/Makefile
+++ b/liquidity-providers-extended/Makefile
@@ -6,7 +6,7 @@ build:
 
 .PHONY: stream
 stream: build
-	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 357086000 -t +1 > output.jsonl
+	substreams run -e $(ENDPOINT) substreams.yaml map_block -s 358181241 -t +100
 
 .PHONY: protogen
 protogen:
