--- a/filter-program-transactions/substreams.yaml
+++ b/filter-program-transactions/substreams.yaml
@@ -1,7 +1,7 @@
 specVersion: v0.1.0
 package:
-  name: 'new_programs_v1_0_27'
-  version: v1.0.27
+  name: 'programs_long_running_depin_v1_0_01'
+  version: v1.0.0
 
 protobuf:
   files:
